--- a/Head First HTML与CSS/第十章/lounge.css
+++ b/Head First HTML与CSS/第十章/lounge.css
@@ -33,3 +33,47 @@ h2 {
   background-repeat:   no-repeat;
   background-position: top left;
 }
+
+#elixirs{
+  border:thin solid #007e7e;
+  width: 500px;
+  line-height: 1;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  margin-left: 20px;
+  text-align: center;
+  background-image: url(images/cocktail.gif);
+  background-repeat: repeat-x;
+}
+#elixirs h2{
+  color:black;
+}
+#elixirs h3{
+  color:#d12c47;
+}
+/*页脚footer*/
+#footer{
+  font-size: 50%;
+  text-align: center;
+  line-height: normal;
+  margin-top: 30px;
+}
+/*给cd添加斜体样式*/
+.cd{
+  font-style: italic;
+}
+/*给artist添加粗体样式*/
+.artist{
+  font-weight: bold;
+}
+/*给链接添加样式*/
+#elixirs a:link{
+  color:green;
+}
+#elixirs a:visited{
+  color:red;
+}
+#elixirs a:hover{
+  color:yellow;
+}
